--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
 
-        <head>
+        <header>
             <img src="./img/photo.jpg" alt="">
             <h1>Nazarii Karlyk</h1>
-        </head>
+        </header>
         <main>
             <section>
                 <h2>Contacts</h2>
